--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: cron
     name: export-nuovi-prodotti
     runtime: python
-    schedule: "0 6 * * *" # ogni giorno alle 6:00 del mattino (ora server)
+    schedule: "0 6 * * *"
     envVars:
       - key: SHOPIFY_STORE
         value: a86246.myshopify.com
@@ -22,9 +22,12 @@ services:
         value: Europe/Rome
     buildCommand: pip install -r requirements.txt
     startCommand: >
+      bash -lc '
+      echo "RUN $(date) — store=$SHOPIFY_STORE, out=$OUTPUT_FILE";
       python3 export_new_products_from_ftp.py
-      --ftp-host $FTP_HOST
-      --ftp-user "$FTP_USER"
-      --ftp-pass "$FTP_PASS"
-      --ftp-path "$FTP_PATH"
-      --out "$OUTPUT_FILE"
+        --ftp-host "$FTP_HOST"
+        --ftp-user "$FTP_USER"
+        --ftp-pass "$FTP_PASS"
+        --ftp-path "$FTP_PATH"
+        --out "$OUTPUT_FILE"
+      '
