--- a/render.yaml
+++ b/render.yaml
@@ -26,15 +26,44 @@ services:
     # Se preferisci, puoi anche usare:
     # buildCommand: pip install --upgrade pip && pip install --no-cache-dir -r requirements.txt
     buildCommand: ""
-    startCommand: >-
-      bash -lc 'set -euo pipefail;
-      python -m pip install --upgrade pip >/dev/null 2>&1 || true;
-      pip install --no-cache-dir requests >/dev/null 2>&1;
-      echo "RUN $(date) — store=$SHOPIFY_STORE, out=${OUTPUT_FILE:-NUOVI_PRODOTTI.csv}";
-      python3 export_new_products_from_ftp.py
-        --ftp-host "$FTP_HOST"
-        --ftp-user "$FTP_USER"
-        --ftp-pass "$FTP_PASS"
-        --ftp-path "$FTP_PATH"
-        --out "${OUTPUT_FILE:-NUOVI_PRODOTTI.csv}";
-      ls -lah "${OUTPUT_FILE:-NUOVI_PRODOTTI.csv}" || true'
+    startCommand: |
+  bash -lc '
+    set -euo pipefail
+
+    echo "== ENV =="
+    echo "PWD=$(pwd)"
+    python3 -V || true
+    which python3 || true
+
+    echo "== Ensure pip in this Python =="
+    python3 -m ensurepip --upgrade || true
+    python3 -m pip --version || true
+
+    echo "== Install requests (runtime) =="
+    python3 -m pip install --upgrade pip
+    python3 -m pip install --no-cache-dir requests
+
+    echo "== Verify requests in THIS interpreter =="
+    python3 - <<'"'"'PY'"'"'
+import sys, pkgutil
+print("Executable:", sys.executable)
+print("requests available?", bool(pkgutil.find_loader("requests")))
+import requests
+print("requests version:", requests.__version__)
+PY
+
+    echo "== Repo files =="
+    ls -lah
+
+    echo "== RUN =="
+    echo "RUN $(date) — store=$SHOPIFY_STORE, out=${OUTPUT_FILE:-NUOVI_PRODOTTI.csv}"
+    python3 export_new_products_from_ftp.py \
+      --ftp-host "$FTP_HOST" \
+      --ftp-user "$FTP_USER" \
+      --ftp-pass "$FTP_PASS" \
+      --ftp-path "$FTP_PATH" \
+      --out "${OUTPUT_FILE:-NUOVI_PRODOTTI.csv}"
+
+    echo "== RESULT =="
+    ls -lah "${OUTPUT_FILE:-NUOVI_PRODOTTI.csv}" || true
+  '
